--- a/books.html
+++ b/books.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fody Slider</title>
+    <title>Books</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="books.css">
 
@@ -14,8 +14,7 @@
   <body>
     <section id="tranding">
       <div class="container">
-        <h3 class="text-center section-subheading">- popular Delivery -</h3>
-        <h1 class="text-center section-heading">Tranding food</h1>
+        <h3 class="text-center section-subheading">	&#10084; Books We've Read &#10084;</h3>
       </div>
       <div class="container">
         <div class="swiper tranding-slider">
@@ -23,24 +22,13 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-1.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/acertainhunger.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$20</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Special Pizza
+                    A Certain Hunger
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
                 </div>
               </div>
             </div>
@@ -48,24 +36,13 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-2.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/all%20tomorrow.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$20</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Meat Ball
+                    All Tomorrows
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
                 </div>
               </div>
             </div>
@@ -73,24 +50,27 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-3.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/americangods.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$40</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Burger
+                    American Gods
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+             <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/circle.jpg?raw=true" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                  <h2 class="food-name">
+                    Circe
+                  </h2>
                 </div>
               </div>
             </div>
@@ -98,24 +78,13 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-4.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/dunebook1.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$15</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Frish Curry
+                    Dune
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
                 </div>
               </div>
             </div>
@@ -123,24 +92,13 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-5.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/dunebook2.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$15</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Pane Cake
+                    Dune Messiah
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
                 </div>
               </div>
             </div>
@@ -148,24 +106,13 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-6.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/dunebook3.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$20</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Vanilla cake
+                    Children of Dune
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
                 </div>
               </div>
             </div>
@@ -173,24 +120,52 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="images/tranding-food-7.png" alt="Tranding">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/flowersofthekillermoon.jpg?raw=true" alt="Tranding">
               </div>
               <div class="tranding-slide-content">
-                <h1 class="food-price">$8</h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    Straw Cake
+                    Killers of the Flower Moon
                   </h2>
-                  <h3 class="food-rating">
-                    <span>4.5</span>
-                    <div class="rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-                  </h3>
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/reddit.png?raw=true" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                  <h2 class="food-name">
+                    Reddit
+                  </h2>
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/say%20nothing.jpg?raw=true" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                  <h2 class="food-name">
+                    Say Nothing
+                  </h2>
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/swordofkaigen.jpg?raw=true" alt="Tranding">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                  <h2 class="food-name">
+                    The Sword of Kaigen
+                  </h2>
                 </div>
               </div>
             </div>
