--- a/timeline.html
+++ b/timeline.html
@@ -115,6 +115,11 @@
     <time>January 1, 2025</time> Celebrated New Years and wrote New Year's Resolutions for the first time together
   </div>
 </li>
+    <li>
+      <div>
+        <time>February 14, 2025</time> First Valentines Together
+      </div>
+    </li>
     <li></li>
   </ol>
 
