--- a/games.html
+++ b/games.html
@@ -187,9 +187,9 @@
     </div>
     <!-- end main -->
 
-    <script src="./static/js/constant.js"></script>
-    <script src="./static/js/sudoku.js"></script>
-    <script src="./static/js/app.js"></script>
+    <script src="constant.js"></script>
+    <script src="sudoku.js"></script>
+    <script src="games.js"></script>
 </body>
 
 </html>
