--- a/openwhen.html
+++ b/openwhen.html
@@ -84,6 +84,17 @@ header nav a:hover {
     </style>
   </head>
   <body>
+
+     <header>
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="letters.html">Letter</a>
+        <a href="memories.html">Memories</a>
+        <a href="timeline.html">Timeline</a>
+        <a href="room.html">Our Home</a>
+        <a href="openwhen.html" class="active">Open When</a>
+      </nav>
+    </header>
     <section>
       <!-- CARD - 1 -->
       <div class="card">
