--- a/memories.html
+++ b/memories.html
@@ -19,7 +19,7 @@
         <a href="memories.html" class="active">Memories</a>
         <a href="timeline.html">Timeline</a>
         <a href="room.html">Our Home</a>
-        <a href="">Open When</a>
+        <a href="openwhen.html">Open When</a>
       </nav>
     </header>
 
