--- a/timeline.html
+++ b/timeline.html
@@ -15,7 +15,7 @@
         <a href="memories.html">Memories</a>
         <a href="timeline.html" class="active">Timeline</a>
         <a href="room.html">Our Home</a>
-        <a href="">Open When</a>
+        <a href="openwhen.html">Open When</a>
       </nav>
     </header>
 
