--- a/room.html
+++ b/room.html
@@ -14,7 +14,7 @@
             <a href="memories.html">Memories</a>
             <a href="timeline.html">Timeline</a>
             <a href="room.html" class="active">Our Home</a>
-            <a href="">Open When</a>
+            <a href="openwhen.html">Open When</a>
         </nav>
     </header>
 
