--- a/openwhen.html
+++ b/openwhen.html
@@ -100,10 +100,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/AC.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card1front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card1back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -112,10 +112,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/KC.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card2front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card2back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -123,10 +123,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/QC.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card3front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card3back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -134,10 +134,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/JC.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card4front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card4back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -145,10 +145,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/10C.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card5front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card5back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -156,10 +156,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/9C.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card6front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card6back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -167,10 +167,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/8C.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card7front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card7back.jpg?raw=true" />
           </div>
         </div>
       </div>
@@ -178,10 +178,10 @@ header nav a:hover {
       <div class="card">
         <div class="card-container">
           <div class="card-front">
-            <img src="./png/7C.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card8front.jpg?raw=true" />
           </div>
           <div class="card-back">
-            <img src="./png/purple_back.png" />
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/card8back.jpg?raw=true" />
           </div>
         </div>
       </div>
