--- a/openwhen.html
+++ b/openwhen.html
@@ -68,9 +68,12 @@ header nav a:hover {
       .card-front {
         grid-area: 1 / 1;
         transform: rotateY(180deg);
+        z-index: 2;
       }
       .card-back {
         grid-area: 1 / 1;
+        z-index: 1;
+        backface-visibility: hidden
       }
 
       /* FIX CARD IMAGES WIDTH */
