--- a/openwhen.html
+++ b/openwhen.html
@@ -68,11 +68,11 @@ header nav a:hover {
       .card-front {
         grid-area: 1 / 1;
         transform: rotateY(180deg);
-        z-index: 2;
+        z-index: 2 1;
       }
       .card-back {
         grid-area: 1 / 1;
-        z-index: 1;
+        z-index: 2 1;
         backface-visibility: hidden
       }
 
