--- a/openwhen.html
+++ b/openwhen.html
@@ -48,42 +48,53 @@ header nav a:hover {
         justify-content: center;
       }
 
-      /* TAKE OBJECT FAR FROM PERSPECTIVE VIEW */
-      .card {
-        /* background-color: #0000aa; */
-        perspective: 1000px;
-        margin: 1rem;
-      }
+     /* General styling */
+.card {
+  perspective: 1000px; /* This adds depth to the 3D transformation */
+  margin: 1rem;
+}
 
-      /* SET SAME COLUMN AND ROW FOR BOTH CARD */
-      .card-container {
-        display: grid;
-        grid-template-columns: 1fr;
+.card-container {
+  width: 15rem;
+  height: 20rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  transition: transform 1s ease;
+  transform-style: preserve-3d;
+  position: relative;
+}
 
-        
-        transition: all 1s ease;
+/* Front and back sides */
+.card-front, .card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; /* Hide the back side when flipped */
+}
 
-        transform-style: preserve-3d;
-      }
-      .card-front {
-        grid-area: 1 / 1;
-        transform: rotateY(180deg);
-        z-index: 2 1;
-      }
-      .card-back {
-        grid-area: 1 / 1;
-        z-index: 2 1;
-        backface-visibility: hidden
-      }
+.card-front {
+  z-index: 2;
+}
 
-      /* FIX CARD IMAGES WIDTH */
-      .card-container img {
-        width: 15rem;
-      }
+.card-back {
+  transform: rotateY(180deg); /* Flip the back card */
+  z-index: 1;
+}
 
-      .card:hover .card-container {
-        transform: rotateY(180deg);
-      }
+/* When hovering over the card container, rotate it */
+.card:hover .card-container {
+  transform: rotateY(180deg); /* Flip the entire card */
+}
+
+/* Ensure images fit within the card container */
+.card-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Keeps the image aspect ratio */
+}
     </style>
   </head>
   <body>
