--- a/openwhen.html
+++ b/openwhen.html
@@ -49,6 +49,7 @@ header nav a:hover {
       }
 
      /* General styling */
+/* General styling */
 .card {
   perspective: 1000px; /* This adds depth to the 3D transformation */
   margin: 1rem;
@@ -89,11 +90,11 @@ header nav a:hover {
   transform: rotateY(180deg); /* Flip the entire card */
 }
 
-/* Ensure images fit within the card container */
+/* Fix images within the card */
 .card-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Keeps the image aspect ratio */
+  object-fit: contain; /* Ensure the entire image is visible */
 }
     </style>
   </head>
