--- a/openwhen.html
+++ b/openwhen.html
@@ -46,6 +46,7 @@ header nav a:hover {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+          margin-top: 80px;
       }
 
      /* General styling */
