--- a/openwhen.html
+++ b/openwhen.html
@@ -7,6 +7,11 @@
 
     <style>
 
+      body {
+  background-color: #f5a6c1; /* Choose any color you'd like */
+  margin: 0; /* Remove default margin for a clean layout */
+}
+
       /* Header styles to ensure it's fixed at the top */
 header {
   background-color: transparent; /* Transparent background */
