--- a/home.html
+++ b/home.html
@@ -32,10 +32,12 @@
             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/image1.jpg?raw=true);">
                 <div class="content">
                     <div class="title">&hearts;</div>
-                    <div class="name">Letters</div>
-                    <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
+                    <div class="name">Letter</div>
+                    <div class="des">My love expressed in words</div>
                     <div class="btn">
+                        <a href="letters.html">
                         <button>Click Me Babo</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -45,9 +47,11 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Memories</div>
-                    <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
+                    <div class="des">My favorite things about you</div>
                     <div class="btn">
+                        <a href="memories.html">
                         <button>Click Here Babo</button>
+                        </a>
                     </div>
                 </div>
 
@@ -58,9 +62,11 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Timeline</div>
-                    <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
+                    <div class="des">A walk down memory lane</div>
                     <div class="btn">
+                        <a href="timeline.html">
                         <button>Click Here Babo</button>
+                        </a>
                     </div>
                 </div>
 
@@ -71,9 +77,11 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Our Home</div>
-                    <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
+                    <div class="des">What our room will look like</div>
                     <div class="btn">
+                        <a href="room.html">
                         <button>Click Here Babo</button>
+                        </a>
                     </div>
                 </div>
 
@@ -84,9 +92,11 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Open When</div>
-                    <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
+                    <div class="des">Letters for moments</div>
                     <div class="btn">
+                        <a href="openwhen.html">
                         <button>Click Here Babo</button>
+                        </a>
                     </div>
                 </div>
 
