--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Memories</div>
-                    <div class="des">My favorite things about you</div>
+                    <div class="des">My favorite things about you that I still remember till now</div>
                     <div class="btn">
                         <a href="memories.html">
                         <button>Click Here Babo</button>
@@ -62,7 +62,7 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Timeline</div>
-                    <div class="des">A walk down memory lane</div>
+                    <div class="des">A walk down memory lane and everything we have accomplished as a couple</div>
                     <div class="btn">
                         <a href="timeline.html">
                         <button>Click Here Babo</button>
@@ -77,7 +77,7 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Our Home</div>
-                    <div class="des">What our room will look like</div>
+                    <div class="des">An illustration of what our room and the things in it will look like</div>
                     <div class="btn">
                         <a href="room.html">
                         <button>Click Here Babo</button>
@@ -92,7 +92,7 @@
                 <div class="content">
                     <div class="title">&hearts;</div>
                     <div class="name">Open When</div>
-                    <div class="des">Letters for moments</div>
+                    <div class="des">Letters for moments and times when you need them</div>
                     <div class="btn">
                         <a href="openwhen.html">
                         <button>Click Here Babo</button>
